<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/exit" 
        android:showAsAction="always|withText|collapseActionView" 
        android:title="@string/exit">
        
    </item>
    
    <item 
        android:id="@+id/setTextColor" 
        android:title="@string/text_color">
        
        <menu>
            <item 
                android:id="@+id/holoText" 
                android:title="@string/holo_default_" />
            
            <item 
                android:id="@+id/blackText"
                android:title="@string/black" />
            
        </menu>
        
    </item>
    
    <group
         android:id="@+id/groups_themes" 
         android:visible="false">
        
        <item 
            android:id="@+id/themes" 
            android:title="@string/themes">
            
            <menu>
                <item 
                    android:id="@+id/Holo"
                     android:title="@string/holo"/>
                
                <item
                     android:id="@+id/Holo_Light" 
                     android:title="@string/holo_light_default_"/>
                
                <item 
                    android:id="@+id/Holo_Light_DAB" 
                    android:title="@string/holo_light_darkactionbar"/>			
                
            </menu>
            
        </item>    
        
    </group>
    

</menu>

